syntax = "proto3";

package pb; 

// ========== Settings ==========

// the top-level settings proto included in gamesettings.
// immutable over the duration of a single game.

message PointsSettings {
  PointStoresSettings usa = 1;
  PointStoresSettings ussr = 2;
  
  
  // TODO(hesswill): delete when migrated to separate settings.
  PointSettings usa_settings = 101;
  PointSettings ussr_settings = 102;
}

message PointStoresSettings {
  PointStoreSettings political = 1;
  PointStoreSettings military = 2;
  PointStoreSettings covert = 3;
}

message PointStoreSettings {
  int32 init = 1;
  int32 income = 2;
}

// TODO(hesswill): delete when migrated to separate settings.
message PointSettings {
  int32 political_store_init = 1;
  int32 political_income_base = 2;
  int32 military_store_init = 3;
  int32 military_income_base = 4;
  int32 covert_store_init = 5;
  int32 covert_income_base = 6;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message PointsState {
  PointStoresState usa = 1;
  PointStoresState ussr = 2;
  
  
  // TODO(hesswill): delete when migrated to separate settings.
  PointState usa_state = 101;
  PointState ussr_state = 102;
}

message PointStoresState {
  PointStoreState political = 1;
  PointStoreState military = 2;
  PointStoreState covert = 3;
}

message PointStoreState {
  int32 count = 1;
}

// TODO(hesswill): delete when migrated to separate settings.
message PointState {
  int32 political = 1;
  int32 military = 2;
  int32 covert = 3;
}